...
                  Navigator.pop(context); // Close the drawer
                  // Navigate to home screen if required
                },
              ),
              ListTile(
                leading: Icon(Icons.receipt),
                title: Text('Item Receipt'),
                onTap: () {
                  Navigator.pushReplacementNamed(context, '/itemWiseReceipt');
                },
              ),
              ListTile(
                leading: Icon(Icons.assignment_return_outlined),
                title: Text('Item Return'),
                onTap: () {
                  Navigator.pushReplacementNamed(context, '/itemReturnScreen');
                },
              ),
              ListTile(
                leading: Icon(Icons.assignment_return_outlined),
...
                onTap: () {
                  Navigator.pushReplacementNamed(context, '/addReturnItemXMIScreen');
                },
              ),
              ListTile(
                leading: Icon(Icons.receipt),
                title: Text('Receipt EXMI'),
                onTap: () {
                  Navigator.pushReplacementNamed(context, '/itemReturnXMIListScreen');
                },
              ),
              ListTile(
                leading: Icon(Icons.edit),
                title: Text('Mark Defective'),
                onTap: () {
                  Navigator.pushReplacementNamed(context, '/markDefectiveItemScreen');
                },
              ),
              // ListTile(
              //   leading: Icon(Icons.update_outlined),
...
              //   onTap: () {
              //     Navigator.pushReplacementNamed(context, '/deliveryBoyWiseListShow');
              //   },
              // ),
              // ListTile(
              //   leading: Icon(Icons.logout),
              //   title: Text('Dashboard'),
              //   onTap: () {
              //     Navigator.pushReplacementNamed(context, '/managerDashboardScreen');
              //   },
              // ),
              // ListTile(
              //   leading: Icon(Icons.logout),
...
