...
          BottomNavigationBarItem(
            icon: Icon(Icons.dashboard,size: 16,),
            label: 'Dashboard',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.shopping_cart,size: 16,),
            label: 'Daily Sale',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.summarize,size: 16,),
            label: "Today's Summary",
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.more_horiz,size: 16,),
            label: 'More',
          ),
        ],
        selectedItemColor: Colors.blue, // Set color for selected item
        unselectedItemColor: Colors.black, // Set color for unselected items
        type: BottomNavigationBarType.fixed, // Ensures the labels are displayed
      ),
...
