...
//                                                     .circular(20),
//                                               ),
//                                               padding: EdgeInsets.zero,
//
//                                             ),
//                                             child: Text(
//                                               'Transfer',
//                                               style: TextStyle(
//                                                 fontWeight:
//                                                 FontWeight.bold,
//                                                 fontSize: 12,
//                                               ),
//                                             ),
...
//                   borderRadius: BorderRadius.circular(10),
//                 ),
//               ),
//
//               /// Title
//               const Text(
//                 "Select Item For Stock Transfer",
//                 style: TextStyle(
//                   fontSize: 18,
//                   fontWeight: FontWeight.w600,
//                 ),
//               ),
//
...
